--- a/starter/index.html
+++ b/starter/index.html
@@ -222,6 +222,7 @@
                     <div class="story">
                         <figure class="story__shape">
                             <img src="img/nat-8.jpg" alt="person on a tour" class="story__img">
+                            <figcaption class="story__caption">Mary Smith</figcaption>
                         </figure>
 
                         <div class="story__text">
@@ -231,6 +232,26 @@
                             </p>
                         </div>
                     </div>
+                </div>
+
+                <div class="row">
+                    <div class="story">
+                        <figure class="story__shape">
+                            <img src="img/nat-9.jpg" alt="person on a tour" class="story__img">
+                            <figcaption class="story__caption">Jack Wilson</figcaption>
+                        </figure>
+
+                        <div class="story__text">
+                            <h3 class="heading-tertiary u-margin-bottom-small">Wow! My life is completely different now.</h3>
+                            <p>
+                                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Sequi vero ipsam ratione dolor suscipit natus ex quidem! Maxime, quam aliquam qui natus quibusdam perspiciatis voluptates earum, cupiditate ducimus excepturi accusantium.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="u-center-text u-margin-top-huge">
+                    <a href="#" class="btn-text">Read all stories &rarr;</a>
                 </div>
 
             </section>
