--- a/starter/index.html
+++ b/starter/index.html
@@ -42,7 +42,7 @@
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
 
-                <a href="#" class='btn btn--white btn--animated'>Discover our tours</a>
+                <a href="#section-tours" class='btn btn--white btn--animated'>Discover our tours</a>
             </div>
         </header>
 
@@ -118,7 +118,7 @@
                 </div>
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours 
@@ -153,7 +153,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$297</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                    <a href="#popup" class="btn btn--white">Book Now!</a>
                                 </div>
                             </div>
                         </div>
@@ -186,7 +186,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$497</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                    <a href="#popup" class="btn btn--white">Book Now!</a>
                                 </div>
                             </div>
                         </div>
@@ -219,7 +219,7 @@
                                         <p class="card__price-only">Only</p>
                                         <p class="card__price-value">$897</p>
                                     </div>
-                                    <a href="#" class="btn btn--white">Book Now!</a>
+                                    <a href="#popup" class="btn btn--white">Book Now!</a>
                                 </div>
                             </div>
                         </div>
@@ -355,6 +355,23 @@
                 </div>
             </div>
         </footer>
+
+        <div class="popup" id='popup'>
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="tour photo" class="popup__img">
+                </div>
+
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Tortor at risus viverra adipiscing at in tellus integer. Nec tincidunt praesent semper feugiat nibh sed pulvinar proin. Purus semper eget duis at tellus at urna. Massa ultricies mi quis hendrerit dolor magna eget. Tellus in hac habitasse platea dictumst vestibulum rhoncus. Turpis nunc eget lorem dolor sed viverra ipsum. Suspendisse interdum consectetur libero id faucibus nisl tincidunt eget. Sed blandit libero volutpat sed cras ornare arcu dui vivamus. Ut sem viverra aliquet eget sit amet tellus cras. Sit amet commodo nulla facilisi nullam. Nisi quis eleifend quam adipiscing vitae. Amet nulla facilisi morbi tempus iaculis urna id volutpat. At erat pellentesque adipiscing commodo elit at imperdiet. Volutpat ac tincidunt vitae semper quis lectus. Sed adipiscing diam donec adipiscing tristique risus nec feugiat in. Pellentesque nec nam aliquam sem et tortor consequat id. Et ultrices neque ornare aenean euismod elementum nisi quis eleifend. Et egestas quis ipsum suspendisse ultrices gravida dictum.</p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
 <!-- 
         <section class="grid-test">
             <div class="row">
